# web_8

./: pyproject.toml
web_8_1/: download.py  get.py  mongoengine_models.py  quote_searcher.py
web_8_2/: consumer_email.py  consumer_sms.py  contact_model.py  producer.py
